<package>
  <name>millrace_moveit_config</name>
  <version>0.1.0</version>
  <description>
     Moveit files for the UR5e in Millrace
  </description>
  <author email="koontzn@oregonstate.edu">Noah Koontz</author>
  <maintainer email="koontzn@oregonstate.edu">Noah Koontz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>xacro</run_depend>
  <run_depend>topic_tools</run_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment.
       Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->
</package>
